--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,7 @@ jobs:
           go-version: "1.23.0"
 
       - name: Check format of Written Go Code
-        run: test -z $(go fmt ./...) 
+        run: test -z $(go fmt ./...)
+      
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest 
